--- a/style/main.css
+++ b/style/main.css
@@ -3,14 +3,14 @@ html *
   text-align: center;
 }
 .row{
-  background:#65878F;
-  width:25%;
+  background:#E25041;
+  width:400px;
   margin:0 auto;
   border-radius: 10px;
   border: 3px solid;
   margin-top:2%;
 }
-input {
+#num {
   height: 40px;
   width:90%;
   font-size:100%;
@@ -20,8 +20,16 @@ input {
   border-radius: 10px;
   border: 3px solid #BADA55;
 }
-input[type=button] {
-  background-color:#200D07;
+input[type=button],[type=reset] {
+  height:10%;
+  width: 10%;
+  font-size:0.5em;
+  color:white;
+  border-radius: 10px;
+  border: 3px solid #BADA55;
+}
+
+input[type=reset] {
   height: 50px;
   width:50px;
   font-size:90%;
@@ -29,6 +37,14 @@ input[type=button] {
   border-radius: 10px;
   border: 3px solid #BADA55;
 }
+
+input[type=reset]:hover {
+  background-color:black;
+  height: 50px;
+  width:50px;
+  color:yellow;
+}
+
 input[type=button]:hover {
   background-color:black;
   height: 50px;
